# TclStateMgr

./: AUTHORS  CMakeLists.txt  COPYING  COPYING.LESSER  INSTALL  README  config.h.cmake
src/: CMakeLists.txt  cobj_args.cpp  cobj_args.hpp  cobj_state.c  cobj_state.h  example_Init.c  helperwrapper.hpp  variable_state.c  variable_state.h
